--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,5 @@
 letslunch_iPhone2.xcodeproj/project.xcworkspace/xcuserdata/floflo67.xcuserdatad/UserInterfaceState.xcuserstate
 
 letslunch_iPhone2.xcodeproj/xcuserdata/floflo67.xcuserdatad/xcdebugger/Breakpoints.xcbkptlist
+
+QuickDialog
