--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,5 @@ letslunch_iPhone2.xcodeproj/project.xcworkspace/xcuserdata/floflo67.xcuserdatad/
 letslunch_iPhone2.xcodeproj/xcuserdata/floflo67.xcuserdatad/xcdebugger/Breakpoints.xcbkptlist
 
 QuickDialog
+
+letslunch_iPhone2/constants.h
