--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,5 @@ letslunch_iPhone2.xcodeproj/xcuserdata/floflo67.xcuserdatad/xcdebugger/Breakpoin
 QuickDialog
 
 letslunch_iPhone2/constants.h
+
+letslunch_iPhone2/Supporting Files/constants.h
