--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,3 @@
-
 letslunch_iPhone2.xcodeproj/project.xcworkspace/xcuserdata/floflo67.xcuserdatad/UserInterfaceState.xcuserstate
 
 letslunch_iPhone2.xcodeproj/xcuserdata/floflo67.xcuserdatad/xcdebugger/Breakpoints.xcbkptlist
@@ -6,3 +5,4 @@ letslunch_iPhone2.xcodeproj/xcuserdata/floflo67.xcuserdatad/xcdebugger/Breakpoin
 QuickDialog
 
 letslunch_iPhone2/constants.h
+letslunch_iPhone2/Supporting Files/constants.h
