--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,4 @@
 letslunch_iPhone2.xcodeproj/project.xcworkspace/xcuserdata/floflo67.xcuserdatad/UserInterfaceState.xcuserstate
 letslunch_iPhone2.xcodeproj/xcuserdata/floflo67.xcuserdatad/xcdebugger/Breakpoints.xcbkptlist
+
+letslunch_iPhone2/Supporting Files/constants.h
