--- a/letslunch_iPhone2/Supporting Files/letslunch_iPhone2-Info.plist
+++ b/letslunch_iPhone2/Supporting Files/letslunch_iPhone2-Info.plist
@@ -20,18 +20,6 @@
 	<string>1.0</string>
 	<key>CFBundleSignature</key>
 	<string>????</string>
-	<key>CFBundleVersion</key>
-	<string>1.0</string>
-	<key>LSRequiresIPhoneOS</key>
-	<true/>
-	<key>UIRequiredDeviceCapabilities</key>
-	<array>
-		<string>armv7</string>
-	</array>
-	<key>FacebookAppID</key>
-	<string>588630294501794</string>
-	<key>FacebookDisplayName</key>
-	<string>Let&apos;s lunch - iPhone</string>
 	<key>CFBundleURLTypes</key>
 	<array>
 		<dict>
@@ -40,6 +28,18 @@
 				<string>fb588630294501794</string>
 			</array>
 		</dict>
+	</array>
+	<key>CFBundleVersion</key>
+	<string>1.0</string>
+	<key>FacebookAppID</key>
+	<string>588630294501794</string>
+	<key>FacebookDisplayName</key>
+	<string>Let's lunch - iPhone</string>
+	<key>LSRequiresIPhoneOS</key>
+	<true/>
+	<key>UIRequiredDeviceCapabilities</key>
+	<array>
+		<string>armv7</string>
 	</array>
 	<key>UISupportedInterfaceOrientations</key>
 	<array>
