--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,7 @@ letslunch_iPhone2.xcodeproj/xcuserdata/floflo67.xcuserdatad/xcdebugger/Breakpoin
 
 letslunch_iPhone2.xcodeproj/project.xcworkspace/xcuserdata/Wasif.xcuserdatad/UserInterfaceState.xcuserstate
 letslunch_iPhone2.xcodeproj/xcuserdata/Wasif.xcuserdatad/xcdebugger/Breakpoints.xcbkptlist
+
+letslunch_iPhone2/Supporting Files/constants.h
+
+letslunch_iPhone2/Supporting Files/constants.h
