--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,10 @@ letslunch_iPhone2.xcodeproj/xcuserdata/floflo67.xcuserdatad/xcdebugger/Breakpoin
 
 letslunch_iPhone2.xcodeproj/project.xcworkspace/xcuserdata/Wasif.xcuserdatad/UserInterfaceState.xcuserstate
 letslunch_iPhone2.xcodeproj/xcuserdata/Wasif.xcuserdatad/xcdebugger/Breakpoints.xcbkptlist
+letslunch_iPhone2/Supporting Files/constants.h
+
+.DS_Store
+
+letslunch_iPhone2.xcodeproj/xcuserdata/Wasif.xcuserdatad/xcschemes/letslunch_iPhone2.xcscheme
+
+letslunch_iPhone2.xcodeproj/xcuserdata/Wasif.xcuserdatad/xcschemes/xcschememanagement.plist
