--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,5 @@ letslunch_iPhone2/Supporting Files/constants.h
 letslunch_iPhone2.xcodeproj/xcuserdata/Wasif.xcuserdatad/xcschemes/letslunch_iPhone2.xcscheme
 
 letslunch_iPhone2.xcodeproj/xcuserdata/Wasif.xcuserdatad/xcschemes/xcschememanagement.plist
+
+letslunch_iPhone2/Supporting Files/constants.h
